--- a/eap-cloud-galleon-pack/pom.xml
+++ b/eap-cloud-galleon-pack/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.jboss.eap.cloud</groupId>
         <artifactId>eap-cloud-galleon-pack-parent</artifactId>
-        <version>1.0.0.Beta-redhat-SNAPSHOT</version>
+        <version>1.0.0.Alpha1-redhat-dev</version>
     </parent>
     <artifactId>eap-cloud-galleon-pack</artifactId>
     <packaging>pom</packaging>
