--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </parent>
     <groupId>org.jboss.eap.cloud</groupId>
     <artifactId>eap-cloud-galleon-pack-parent</artifactId>
-    <version>1.0.0.Alpha1-redhat-dev</version>
+    <version>1.0.0.Alpha2-redhat-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Galleon feature-pack for EAP 8 on the Cloud parent</name>
   
