--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,14 @@
     
     <properties>
         <wildfly.cekit.modules.fork>wildfly</wildfly.cekit.modules.fork>
-        <wildfly.cekit.modules.tag>0.27.5</wildfly.cekit.modules.tag>
+        <wildfly.cekit.modules.tag>0.27.6</wildfly.cekit.modules.tag>
         <version.junit>4.13.2</version.junit>
         <!-- version from a test release to unzip in local maven cache -->
         <version.org.eap>8.0.0.Beta-redhat-20220408</version.org.eap>
         <!-- should be 19.0.0.Final-redhat-20220408 but is not present in the test release maven repo -->
         <version.org.wildfly.core>18.0.1.Final-redhat-SNAPSHOT</version.org.wildfly.core>
         <version.org.wildfly.galleon-plugins>5.2.11.Final</version.org.wildfly.galleon-plugins>
-        <version.org.jboss.eap.maven.plugin>1.0.0.Beta-redhat-SNAPSHOT</version.org.jboss.eap.maven.plugin>
+        <version.org.jboss.eap.maven.plugin>1.0.0.Alpha4-redhat-SNAPSHOT</version.org.jboss.eap.maven.plugin>
     </properties>
 
     <dependencyManagement>
