--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,13 @@
     
     <properties>
         <wildfly.cekit.modules.fork>wildfly</wildfly.cekit.modules.fork>
-        <wildfly.cekit.modules.tag>0.27.9</wildfly.cekit.modules.tag>
+        <wildfly.cekit.modules.tag>0.27.12</wildfly.cekit.modules.tag>
         <version.junit>4.13.2</version.junit>
         <!-- version from a test release to unzip in local maven cache -->
-        <version.org.eap>8.0.0.Beta-redhat-20220823</version.org.eap>
-        <version.org.wildfly.core>19.0.0.Beta-redhat-20220823</version.org.wildfly.core>
-        <version.org.wildfly.galleon-plugins>6.0.0.Alpha7</version.org.wildfly.galleon-plugins>
-        <version.org.jboss.eap.maven.plugin>1.0.0.Beta3-redhat-00001</version.org.jboss.eap.maven.plugin>
+        <version.org.eap>8.0.0.Beta-redhat-20220923</version.org.eap>
+        <version.org.wildfly.core>19.0.0.Beta16-redhat-00002</version.org.wildfly.core>
+        <version.org.wildfly.galleon-plugins>6.2.0.Final-redhat-00001</version.org.wildfly.galleon-plugins>
+        <version.org.jboss.eap.maven.plugin>1.0.0.Beta4-redhat-00001</version.org.jboss.eap.maven.plugin>
     </properties>
 
     <dependencyManagement>
