Upgrade to latest artifacts, 0.27.13 wf-cekit-modules. Last compatible 0.27.x tag

--- a/testsuite/basic/pom.xml
+++ b/testsuite/basic/pom.xml
@@ -78,7 +78,7 @@
                                 <feature-pack>
                                     <groupId>org.jboss.eap</groupId>
                                     <artifactId>wildfly-ee-galleon-pack</artifactId>
-                                    <version>${version.org.eap}</version>
+                                    <version>${version.org.jboss.eap}</version>
                                 </feature-pack>
                                 <feature-pack>
                                     <groupId>${project.groupId}</groupId>
