Fix missing inject dependency

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <!-- next tag should come from 0.27.13.x wildfly-cekit branch -->
         <wildfly.cekit.modules.tag>0.27.13.2</wildfly.cekit.modules.tag>
         <version.junit>4.13.2</version.junit>
+        <version.inject>1</version.inject>
         <version.org.jboss.eap>8.0.0.Beta-redhat-00003</version.org.jboss.eap>
         <version.org.wildfly.core>19.0.0.Beta16-redhat-00004</version.org.wildfly.core>
         <version.org.wildfly.galleon-plugins>6.2.0.Final-redhat-00001</version.org.wildfly.galleon-plugins>
@@ -73,6 +74,11 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${version.junit}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.inject</groupId>
+                <artifactId>javax.inject</artifactId>
+                <version>${version.inject}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
