Use main wildfly-cekit-modules, remove unused feature-groups and layers

--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,7 @@
     
     <properties>
         <wildfly.cekit.modules.fork>wildfly</wildfly.cekit.modules.fork>
-        <!-- next tag should come from 0.27.13.x wildfly-cekit branch -->
-        <wildfly.cekit.modules.tag>0.27.13.2</wildfly.cekit.modules.tag>
+        <wildfly.cekit.modules.tag>main</wildfly.cekit.modules.tag>
         <version.junit>4.13.2</version.junit>
         <version.inject>1</version.inject>
         <version.org.jboss.eap>8.0.0.Beta-redhat-00003</version.org.jboss.eap>
