--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,13 @@
     
     <properties>
         <wildfly.cekit.modules.fork>wildfly</wildfly.cekit.modules.fork>
-        <!-- next tag should come from 0.27.13.x wildfly-cekit branch -->
-        <wildfly.cekit.modules.tag>0.27.13.2</wildfly.cekit.modules.tag>
+        <wildfly.cekit.modules.tag>0.27.15</wildfly.cekit.modules.tag>
         <version.junit>4.13.2</version.junit>
         <version.inject>1</version.inject>
         <version.org.jboss.eap>8.0.0.Beta-redhat-00003</version.org.jboss.eap>
-        <version.org.wildfly.core>19.0.0.Beta16-redhat-00004</version.org.wildfly.core>
-        <version.org.wildfly.galleon-plugins>6.2.0.Final-redhat-00001</version.org.wildfly.galleon-plugins>
-        <version.org.jboss.eap.maven.plugin>1.0.0.Beta5-redhat-00001</version.org.jboss.eap.maven.plugin>
+        <version.org.wildfly.core>20.0.0.Beta6</version.org.wildfly.core>
+        <version.org.wildfly.galleon-plugins>6.3.2.Final</version.org.wildfly.galleon-plugins>
+        <version.org.jboss.eap.maven.plugin>1.0.0.Beta7-redhat-00001</version.org.jboss.eap.maven.plugin>
     </properties>
 
     <dependencyManagement>
