--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.jboss.eap.cloud</groupId>
         <artifactId>eap-cloud-galleon-pack-parent</artifactId>
-        <version>1.0.0.Beta5-redhat-SNAPSHOT</version>
+        <version>1.0.0.Final-redhat-SNAPSHOT</version>
     </parent>
     <artifactId>eap-cloud-galleon-pack-testsuite-parent</artifactId>
     <packaging>pom</packaging>
