--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <version.org.jboss.eap>8.0.0.GA-redhat-SNAPSHOT</version.org.jboss.eap>
         <version.org.wildfly.core>20.0.0.Final</version.org.wildfly.core>
         <version.org.wildfly.galleon-plugins>6.4.0.Final-redhat-00001</version.org.wildfly.galleon-plugins>
-        <version.org.jboss.eap.maven.plugin>1.0.0.Beta9-redhat-00001</version.org.jboss.eap.maven.plugin>
+        <version.org.jboss.eap.maven.plugin>1.0.0.Final-redhat-00001</version.org.jboss.eap.maven.plugin>
     </properties>
 
     <dependencyManagement>
