--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -22,12 +22,12 @@
     <parent>
         <groupId>org.jboss.eap.cloud</groupId>
         <artifactId>eap-cloud-galleon-pack-parent</artifactId>
-        <version>1.0.0.Final-redhat-SNAPSHOT</version>
+        <version>2.0.0.Final-redhat-SNAPSHOT</version>
     </parent>
     <artifactId>eap-cloud-galleon-pack-testsuite-parent</artifactId>
     <packaging>pom</packaging>
-    <name>Galleon feature-pack for EAP 8 on the Cloud testsuite parent</name>
-    <description>Galleon feature-pack for EAP 8 on the Cloud parent</description>
+    <name>Galleon feature-pack for EAP 8.1 on the Cloud testsuite parent</name>
+    <description>Galleon feature-pack for EAP 8.1 on the Cloud testsuite parent</description>
 
     <properties>
         <management.address>${node0}</management.address>
