Initiate move to 8.1

--- a/testsuite/basic/pom.xml
+++ b/testsuite/basic/pom.xml
@@ -79,16 +79,30 @@
                         </goals>
                         <phase>compile</phase>
                         <configuration>
+                            <channels>
+                                <channel>
+                                <manifest>
+                                    <groupId>org.jboss.eap</groupId>
+                                    <artifactId>wildfly-ee-galleon-pack</artifactId>
+                                    <version>${version.org.jboss.eap}</version>
+                                </manifest>
+                                </channel>
+                                <channel>
+                                <manifest>
+                                    <groupId>org.jboss.eap.cloud</groupId>
+                                    <artifactId>eap-cloud-galleon-pack</artifactId>
+                                    <version>${project.version}</version>
+                                </manifest>
+                                </channel>
+                            </channels>
                             <feature-packs>
                                 <feature-pack>
                                     <groupId>org.jboss.eap</groupId>
                                     <artifactId>wildfly-ee-galleon-pack</artifactId>
-                                    <version>${version.org.jboss.eap}</version>
                                 </feature-pack>
                                 <feature-pack>
                                     <groupId>${project.groupId}</groupId>
                                     <artifactId>eap-cloud-galleon-pack</artifactId>
-                                    <version>${project.version}</version>
                                 </feature-pack>
                             </feature-packs>
                         </configuration>
