--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,13 @@
     
     <properties>
         <wildfly.cekit.modules.fork>wildfly</wildfly.cekit.modules.fork>
-        <wildfly.cekit.modules.tag>0.29.alpha1.3</wildfly.cekit.modules.tag>
+        <wildfly.cekit.modules.tag>0.33.0</wildfly.cekit.modules.tag>
         <version.junit>4.13.2</version.junit>
         <version.inject>1</version.inject>
-        <version.org.jboss.eap>8.0.0.GA-redhat-SNAPSHOT</version.org.jboss.eap>
+        <version.org.jboss.eap>8.0.7.GA-redhat-SNAPSHOT</version.org.jboss.eap>
         <version.org.wildfly.core>21.0.3.Final-redhat-00001</version.org.wildfly.core>
-        <version.org.wildfly.galleon-plugins>6.4.8.Final-redhat-00001</version.org.wildfly.galleon-plugins>
-        <version.org.jboss.eap.maven.plugin>1.0.0.Final-redhat-00001</version.org.jboss.eap.maven.plugin>
+        <version.org.wildfly.galleon-plugins>7.1.0.Final</version.org.wildfly.galleon-plugins>
+        <version.org.jboss.eap.maven.plugin>2.0.0.Final-SNAPSHOT</version.org.jboss.eap.maven.plugin>
     </properties>
 
     <dependencyManagement>
