Fix for JBEAP-28964, eap-cloud-galleon-pack:2.0.0.Beta1-redhat-0000 failing with provisioning cloud-default-config layer

--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,10 @@
         <wildfly.cekit.modules.tag>0.35.0</wildfly.cekit.modules.tag>
         <version.junit>4.13.2</version.junit>
         <version.inject>1</version.inject>
-        <version.org.jboss.eap>8.0.5.GA-redhat-00001</version.org.jboss.eap>
-        <version.org.wildfly.core>21.0.9.Final-redhat-00001</version.org.wildfly.core>
+        <version.org.jboss.eap>8.1.0.Beta-redhat-00001</version.org.jboss.eap>
+        <version.org.wildfly.core>27.0.1.Final-redhat-00002</version.org.wildfly.core>
         <version.org.wildfly.galleon-plugins>7.3.1.Final</version.org.wildfly.galleon-plugins>
-        <version.org.jboss.eap.maven.plugin>2.0.0.Final-SNAPSHOT</version.org.jboss.eap.maven.plugin>
+        <version.org.jboss.eap.maven.plugin>2.0.0.Beta1-redhat-00002</version.org.jboss.eap.maven.plugin>
     </properties>
 
     <dependencyManagement>
